Add RAW version

--- a/homework7/src/main/resources/templates/index.html
+++ b/homework7/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Homepage</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <header>
@@ -13,6 +13,7 @@
 <!--    <a href="/swagger-ui/index.html" class="button">Swagger(default)</a>-->
     <a href="/idev-documentation" class="button">Swagger</a>
     <a href="/idev-api-docs" class="button">Swagger Docs</a>
+    <a href="/registration" class="button">Register</a>
 </header>
 <h3>Task Service</h3>
 <p>Welcome to Task Service Homepage. Check link in header</p>
