--- a/homework7/src/main/resources/templates/new_employer.html
+++ b/homework7/src/main/resources/templates/new_employer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Employer</title>
-    <link th:href="@{/styles.css}" rel="stylesheet"/>
+    <link th:href="@{/css/styles.css}" rel="stylesheet"/>
 </head>
 <body>
 <header>
@@ -17,7 +17,7 @@
 </form>
 
 <form class="small_form" method="post">
-    <input type="text" name="name">
+    <input type="text" name="firstname">
     <div class="add_buttons">
         <button name="add" type="submit" formaction="/employeradd">add</button>
     </div>
