--- a/homework7/src/main/resources/templates/employers.html
+++ b/homework7/src/main/resources/templates/employers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Employers</title>
-    <link th:href="@{/styles.css}" rel="stylesheet"/>
+    <link th:href="@{/css/styles.css}" rel="stylesheet"/>
 </head>
 <body>
 <header>
