--- a/homework7/src/main/resources/templates/registration.html
+++ b/homework7/src/main/resources/templates/registration.html
@@ -5,18 +5,24 @@
     <title>Registration</title>
 </head>
 <body>
-<form method="post">
-    <label for="username">Username:
-        <input id="username" type="text" name="username">
-    </label><br>
-    <label for="rawPassword">Password:
-        <input id="rawPassword" type="password" name="rawPassword">
-    </label><br>
-        <div th:each="role : ${roles}">
-            <input th:id="${role}" type="radio" name="role" th:value="${role}" th:checked="${role == user.role}">
-            <label th:for="${role}" th:text="${role}">Role name</label>
-        </div>
-    <button type="submit">Register</button>
+<form id="myForm" class="small_form" action="/registration/new-user" method="post">
+    <label>
+        <input type="text" name="username" placeholder="username">
+    </label>
+    <label>
+        <input type="password" name="password" placeholder="password">
+    </label>
+    <label>
+        <input type="checkbox" name="roles" value="ROLE_USER" id="role_user" checked="checked">
+        <label for="role_user">User</label>
+        <input type="checkbox" name="roles" value="ROLE_ADMIN" id="role_admin">
+        <label for="role_admin">Admin</label>
+    </label>
+    <p th:text="${response}"></p>
 </form>
+
+<div class="add_buttons">
+    <button name="register" type="submit" form="myForm">Register</button>
+</div>
 </body>
 </html>
