--- a/homework7/src/main/resources/templates/index.html
+++ b/homework7/src/main/resources/templates/index.html
@@ -8,12 +8,14 @@
 <body>
 <header>
     <a href="/" class="button">Home</a>
-    <a href="/tasks" class="button">Task list</a>
     <a href="/employers" class="button">Employers list</a>
+    <a href="/tasks" class="button">Task list</a>
 <!--    <a href="/swagger-ui/index.html" class="button">Swagger(default)</a>-->
-    <a href="/idev-documentation" class="button">Swagger</a>
     <a href="/idev-api-docs" class="button">Swagger Docs</a>
+    <a href="/idev-documentation" class="button">Swagger</a>
     <a href="/registration" class="button">Register</a>
+    <a href="/login" class="button">Login</a>
+    <a href="/logout" class="button">Logout</a>
 </header>
 <h3>Task Service</h3>
 <p>Welcome to Task Service Homepage. Check link in header</p>
