--- a/homework7/src/main/resources/templates/new.html
+++ b/homework7/src/main/resources/templates/new.html
@@ -12,11 +12,13 @@
 </header>
 <h3>New task creation form</h3>
 <form class="small_form">
+    <h1>Name</h1>
     <h1>Description</h1>
     <h1>Commands</h1>
 </form>
 
 <form class="small_form" method="post">
+    <input type="text" name="name">
     <input type="text" name="description">
     <div class="add_buttons">
         <button name="add" type="submit" formaction="/add">add</button>
