--- a/homework7/src/main/resources/templates/new_employer.html
+++ b/homework7/src/main/resources/templates/new_employer.html
@@ -11,12 +11,12 @@
     <a href="/employers" class="button">Employers list</a>
 </header>
 <h3>New employer creation form</h3>
-<form class="small_form">
+<form class="small_form2">
     <h1>Name</h1>
     <h1>Commands</h1>
 </form>
 
-<form class="small_form" method="post">
+<form class="small_form2" method="post">
     <input type="text" name="firstname">
     <div class="add_buttons">
         <button name="add" type="submit" formaction="/employeradd">add</button>
