--- a/homework7/src/main/resources/static/css/styles.css
+++ b/homework7/src/main/resources/static/css/styles.css
@@ -14,7 +14,7 @@ a {
     background: #4CAF50;
     color: white;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     width: 100%;
 }
 
@@ -31,6 +31,15 @@ p{
 }
 
 .small_form {
+    background: #4CAF50;
+    color: white;
+    display: grid;
+    /*grid-template-columns: 1fr 1fr 1fr 1fr;*/
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+}
+
+.small_form2 {
     background: #4CAF50;
     color: white;
     display: grid;
