--- a/homework7/src/main/resources/templates/tasks.html
+++ b/homework7/src/main/resources/templates/tasks.html
@@ -11,16 +11,16 @@
     <a href="/new" class="button">Add Task</a>
 </header>
 
-<form class="small_form">
+<form class="small_form2">
     <h1>Filter</h1>
     <h1>Commands</h1>
 </form>
-<form class="small_form" method="post">
+<form class="small_form2" method="post">
     <select name="status">
         <option value="no_filter" th:selected="${status == 'no_filter'}">No filter</option>
         <option value="new" th:selected="${status == 'new'}">New</option>
         <option value="proc" th:selected="${status == 'proc'}">In process</option>
-        <option value="comp" th:selected="${status == 'comp'}">Completed</option>
+        <option value="done" th:selected="${status == 'done'}">Done</option>
     </select>
     <div class="add_buttons">
         <button name="filter" type="submit" formaction="/filter">save</button>
@@ -31,6 +31,7 @@
 <h3>Task list:</h3>
 <form class="large_form">
     <h1>Id</h1>
+    <h1>Name</h1>
     <h1>Description</h1>
     <h1>Status</h1>
     <h1>Begin Date</h1>
@@ -40,6 +41,7 @@
 
 <form class="large_form" th:each="task: ${tasks}" method="post" th:object="${task}">
     <p th:text="${task.id}"></p>
+    <input type="text" th:value="${task.name}" name="name">
     <input type="text" th:value="${task.description}" name="description">
     <select name="status">
         <option th:each="status : ${T(ru.geekbrains.homework7.database.entity.TaskStatus).values()}"
